1.2-ngld/build/testoverlay2.test.log
[1mtestoverlay2.c:462:10: [0m[0;1;31merror: [0m[1mno member named 'colorkey' in 'struct SDL_PixelFormat'[0m
                format.colorkey=0;
[0;1;32m                ~~~~~~ ^
[0m1 error generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
